apps/subsystems/downloaders/qbittorrent/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: downloaders
  labels:
    app.kubernetes.io/name: qbittorrent
  annotations:
    configmap.reloader.stakater.com/reload: "gluetun-config"
    secret.reloader.stakater.com/reload: "gluetun-secrets"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent
    spec:
      automountServiceAccountToken: false
      containers:
      - name: qbittorrent
        image: ghcr.io/home-operations/qbittorrent:5.2.3@sha256:4fcf15b7f265c2c8d7bc2a7e13240a07e0593c326f3cf3b5b9bb69eec5b79299
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/v2/app/version
            port: 8080
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        ports:
        - name: qbittorrent
          containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/v2/app/version
            port: 8080
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        startupProbe:
          httpGet:
            path: /api/v2/app/version
            port: 8080
          failureThreshold: 30
          periodSeconds: 10
        resources:
          requests:
            cpu: 200m
            memory: 1Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: false
        volumeMounts:
        - mountPath: /config
          name: qbittorrent-data
        - mountPath: /data
          name: qbittorrent-media
        - mountPath: /tmp
          name: qbittorrent-temp
      securityContext:
        runAsNonRoot: true
        runAsUser: ${media_writer_uid}
        runAsGroup: ${media_writer_gid}
        fsGroup: ${media_writer_gid}
        fsGroupChangePolicy: OnRootMismatch
      volumes:
      - name: qbittorrent-data
        persistentVolumeClaim:
          claimName: qbittorrent-data
      - name: qbittorrent-media
        persistentVolumeClaim:
          claimName: media
      - name: qbittorrent-temp
        emptyDir: {}
      - name: gluetun-temp
        emptyDir: {}
